# AutoDevOS

./: .env.example  .gitignore  AutoDevOS.agent.md  CODE_CHANGES_DETAILED.md  COMMANDS_ONLY.md  COMPLETE_DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VALIDATION.md  DOCS_INDEX.md  Dockerfile  FILE_MANIFEST.md  HF_DEPLOY_NOW.md  HUGGINGFACE_DEPLOYMENT.md  IMPLEMENTATION.md  OPENENV_SUBMISSION.md  OPENENV_SUBMISSION_CHECKLIST.md  OPTIMIZATION_REPORT.json  OPTIMIZATION_REPORT.py  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE4_ERROR_RESOLUTION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  READY_FOR_DEPLOYMENT.md  SCHEMA_VALIDATION_FIX.md  SCORE_IMPROVEMENT_QUICK_REFERENCE.md  SCORE_IMPROVEMENT_REPORT.md  SCORE_IMPROVEMENT_VALIDATION.md  START_HERE.md  SUBMISSION_CHECKLIST.md  SUBMISSION_STATUS.md  SYSTEM_OVERVIEW.md  api_client_schema_compliant.py  check_llm.py  check_servers.py  comprehensive_test.py  debug_generation.py  (+52 more)
_deployment_package/: .env.example  DEPLOY_QUICK_START.md  Dockerfile  README.md  inference.py  openenv.yaml  openenv_env.py  requirements-inference.txt
backend/: Dockerfile  alembic.ini  llm_generator.py  main.py  openenv_integration.py  requirements.txt
backend/agents/: architect.py  base.py  boss.py  developer.py  plan_enhancer.py  pm.py  qa.py  security.py  seo.py  tech_debt.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
generated_sites/: .gitkeep
sandbox/: Dockerfile  package-lock.json  package.json  server.js
server/: app.py
(+75 files in other folders)
